# PipeForge

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
include/: IPipeline.h  dbscanpipe.h  downloadpipe.h  outputpipe.h  pipeline.h  pointcloud_adapter.h  pointdb.h  preprocessingpipe.h
src/: dbscanpipe.cpp  downloadpipe.cpp  main.cpp  outputpipe.cpp  pipeline.cpp  preprocessingpipe.cpp
